--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,72 @@
-annotated-types==0.7.0
-anyio==4.9.0
-asgiref==3.8.1
-beautifulsoup4==4.13.4
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
+# Core
 Django==5.2
-exceptiongroup==1.2.2
-faiss-cpu==1.10.0
-filelock==3.18.0
-fsspec==2025.3.2
-h11==0.14.0
-httpcore==1.0.8
-httpx==0.28.1
-huggingface-hub==0.30.2
-idna==3.10
-Jinja2==3.1.6
-joblib==1.4.2
-MarkupSafe==3.0.2
-mpmath==1.3.0
-networkx==3.4.2
+gunicorn
+whitenoise
+dj-database-url
+python-dotenv
+
+# Parsing & Scraping
+beautifulsoup4==4.13.4
+PyPDF2==3.0.1
+soupsieve==2.6
+PyMuPDF==1.25.5
+
+# NLP & Embeddings
+sentence-transformers==4.1.0
+transformers==4.51.3
+torch==2.6.0
+tokenizers==0.21.1
+scikit-learn==1.6.1
 nltk==3.9.1
-numpy==2.2.4
-ollama==0.4.7
-packaging==24.2
+
+# Vector Search
+faiss-cpu==1.10.0
+
+# Utils & Dependencies
+requests==2.32.3
 pandas==2.2.3
+numpy==2.2.4
+python-dateutil==2.9.0.post0
+typing_extensions==4.13.2
+typing-inspection==0.4.0
+regex==2024.11.6
+packaging==24.2
+joblib==1.4.2
+tqdm==4.67.1
+fsspec==2025.3.2
+safetensors==0.5.3
+
+# HTTP Clients
+httpx==0.28.1
+httpcore==1.0.8
+
+# Django extras
+sqlparse==0.5.3
+asgiref==3.8.1
+pytz==2025.2
+tzdata==2025.2
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 pillow==11.2.1
+
+# Database
 psycopg2==2.9.10
+
+# Type System
 pydantic==2.11.3
 pydantic_core==2.33.1
-PyMuPDF==1.25.5
-PyPDF2==3.0.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.2
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.2
-sentence-transformers==4.1.0
+annotated-types==0.7.0
+
+# Other deps required by above
+click==8.1.8
 six==1.17.0
-sniffio==1.3.1
-soupsieve==2.6
-sqlparse==0.5.3
-sympy==1.13.1
-threadpoolctl==3.6.0
-tokenizers==0.21.1
-torch==2.6.0
-tqdm==4.67.1
-transformers==4.51.3
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-tzdata==2025.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
 urllib3==2.4.0
-whitenoise==6.9.0
+idna==3.10
+sniffio==1.3.1
+anyio==4.9.0
+exceptiongroup==1.2.2
+sympy==1.13.1
+networkx==3.4.2
+threadpoolctl==3.6.0
