--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ PyMuPDF==1.25.5
 # NLP & Embeddings
 sentence-transformers==4.1.0
 transformers==4.51.3
-torch==2.6.0
+#torch==2.6.0
 tokenizers==0.21.1
 scikit-learn==1.6.1
 nltk==3.9.1
