--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ dj-database-url
 python-dotenv
 
 # Parsing & Scraping
-beautifulsoup4==4.13.4
-PyPDF2==3.0.1
-soupsieve==2.6
-PyMuPDF==1.25.5
+#beautifulsoup4==4.13.4
+#PyPDF2==3.0.1
+#soupsieve==2.6
+#PyMuPDF==1.25.5
 
 # NLP & Embeddings
 sentence-transformers==4.1.0
