--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
-huggingface-hub==0.30.2
+# huggingface-hub==0.30.2  # Likely not needed for Azure OpenAI deployment
 idna==3.10
 Jinja2==3.1.6
 jiter==0.9.0
@@ -26,7 +26,7 @@ mpmath==1.3.0
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.4
-ollama==0.4.7
+# ollama==0.4.7  # Removing as requested
 openai==1.76.0
 packaging==24.2
 pandas==2.2.3
@@ -42,20 +42,20 @@ pytz==2025.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
-safetensors==0.5.3
+# safetensors==0.5.3  # Likely not needed for Azure OpenAI deployment
 scikit-learn==1.6.1
 scipy==1.15.2
-sentence-transformers==4.1.0
+# sentence-transformers==4.1.0  # Likely not needed for Azure OpenAI deployment
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 sqlparse==0.5.3
 sympy==1.13.1
 threadpoolctl==3.6.0
-tokenizers==0.21.1
-torch==2.6.0
+# tokenizers==0.21.1  # Likely not needed for Azure OpenAI deployment
+# torch==2.6.0  # Likely not needed for Azure OpenAI deployment
 tqdm==4.67.1
-transformers==4.51.3
+# transformers==4.51.3  # Likely not needed for Azure OpenAI deployment
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
